Fix broken style for close menu button

--- a/src/app/shared/components/page-frame/page-frame.component.scss
+++ b/src/app/shared/components/page-frame/page-frame.component.scss
@@ -93,6 +93,4 @@
   position: absolute;
   top: 0;
   right: 0;
-  padding: 16px;
-  height: 100%;
 }
